force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__IsTentative__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsTentative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tentative</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsTentative</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>