force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__MilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__MilestoneDate__c</fullName>
    <label>Milestone Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MilestoneDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>