force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__MilestoneDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__MilestoneDescription__c</fullName>
    <label>Milestone Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MilestoneDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>