force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__MilestoneSiteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MilestoneSiteId__c</fullName>
    <label>Milestone Site</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MilestoneSiteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>