force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__PrimaryAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAccountId__c</fullName>
    <label>Primary Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>