force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__rel_1731039808929_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039808929_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BusinessMilestone_PrimaryAccountId_m_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>BusinessMilestone_PrimaryAccountId_m_rel</relationshipLabel>
    <relationshipName>rel_1731039808929_end</relationshipName>
    <type>Lookup</type>
</CustomField>