force-app/main/default/objects/ssot__BusinessMilestone__dlm/fields/ssot__rel_1731040466113_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040466113_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BusinessMilestone_MilestoneSiteId_ma_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>BusinessMilestone_MilestoneSiteId_ma_rel</relationshipLabel>
    <relationshipName>rel_1731040466113_end</relationshipName>
    <type>Lookup</type>
</CustomField>